<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MySLHS</string>
    <string name="action_settings">SLHS Website</string>
    <string name="teacher_edition">Teacher Edition</string>
    <string name="action_development">My SLHS App Development</string>
    <string name="about_slhs"> About SLHS </string>
    <string name="admissions">Admissions</string>
    <string name="academics">Academics</string>
    <string name="athletics">Athletics</string>
    <string name="calendar">Calendar</string>
    <string name="announcements">Announcements</string>
    <string name="address">Phone: 262.859.2595 + /n + Address: 9026 12th St. Somers, WI 53171</string>
    <string name="about_info">Shoreland Lutheran High School</string>
    <string name="grades_sheet">gradesSheet</string>
    <string name="grades">Grades</string>
    <string name="shoreland_logo">shoreland_logo</string>
    <string name="subStatement">Educate. Equip. Encourage.</string>
    <string name="directions">Get Directions</string>
    <string name="images">Slide Show Images</string>
    <string name="title_activity_about_slhs">About SLHS</string>
    <string name="title_activity_admissions">Admissions</string>
    <string name="title_activity_acedemics">Academics</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_latest_news">Announcements</string>
    <string name="title_activity_maps">Map</string>
    <string name="about_General">About Shoreland Lutheran</string>
    <string name="home_Page">Home</string>
    <string name="title_activity_test">Testing</string>
    <string name="slhsWebsite">SLHS Website</string>
    <string name="school_map">Map of SLHS</string>
    <string name="mission_vision_button">Mission and Vision</string>
    <string name="title_activity_handbook">Handbook</string>
    <string name="bus_routes">Bus Routes</string>
    <string name="tuition_and_fees">Tuition and Fees</string>
    <string name="class_hours">Class Hours</string>
    <string name="faculty">Faculty</string>
    <string name="mission">SLHS Mission:</string>
    <string name="mission_statement">Compelled by the love of Chirst, Shoreland Lutheran High School exists to EDUCATE, EQUIP, and ENCOURAGE students for lives of Christian service.</string>
    <string name="vision">SLHS Vision:</string>
    <string name="vision_statement">Our vision is that Shoreland Lutheran High School is to be the premier faith-based school located between Milwaukee and Chicago. We will achieve this by continuing to serve our federation congregations and schools, as well as pursuing other opportunities for enrollment growth that God is placing before us. We will serve all these students by building on the educational excellence that has existed for more than 40 years, allowing both Christian education and quality education to be available to parents and students.</string>
    <string name="title_activity_activities">Athletics</string>
    <string name="athletics_news">Sports News</string>
    <string name="athletics_directory">Directory</string>
    <string name="athletics_wissports">WisSports</string>
    <string name="athletics_gallery">Gallery</string>
    <string name="athletics_apparel">Apparel</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="loading">Loading</string>
    <string name="title_activity_wissports">WisSports</string>
    <string name="baseball">Baseball</string>
    <string name="basketball_boys">Basketball-Men\'s</string>
    <string name="basketball_girls">Basketball-Women\'s</string>
    <string name="cheer">Cheer</string>
    <string name="cross_country">Cross Country</string>
    <string name="football">Football</string>
    <string name="golf">Golf</string>
    <string name="soccer_boys">Soccer-Men\'s</string>
    <string name="soccer_girls">Soccer-Women\'s</string>
    <string name="softball">Softball</string>
    <string name="strength_training">Strength Training</string>
    <string name="track_and_field">Track and Field</string>
    <string name="volleyball">Volleyball</string>
    <string name="wrestling">Wrestling</string>
    <string name="title_activity_baseball">Baseball</string>
    <string name="title_activity_basketball_boys">Men\'s Basketball</string>
    <string name="title_activity_basketball_girls">Women\'s Basketball</string>
    <string name="title_activity_cheer">Cheer</string>
    <string name="title_activity_cross_country">Cross Country</string>
    <string name="title_activity_football">Football</string>
    <string name="title_activity_golf">Golf</string>
    <string name="title_activity_soccer_boys">Men\'s Soccer</string>
    <string name="title_activity_soccer_girls">Women\'s Soccer</string>
    <string name="title_activity_softball">Softball</string>
    <string name="title_activity_strength_training">Strength Training</string>
    <string name="title_activity_track_field">Track And Field</string>
    <string name="title_activity_volleyball">Volleyball</string>
    <string name="title_activity_wrestling">Wrestling</string>
    <string name="roster">Roster</string>
    <string name="news">News</string>
    <string name="schedule">Schedule</string>
    <string name="bfs">BFS Website</string>
    <string name="title_activity_app_development">App Development</string>
    <string name="developer_name">Tyler White</string>
    <string name="developerRole">Developer of MySLHS</string>
    <string name="grades_student">Student</string>
    <string name="grades_teacher">Teacher</string>
    <string name="grades_parent">Parent</string>
    <string name="about">About the App!</string>
    <string name="about_app_info">MySLHS was a product of a semester project in second semester programming of 2015</string>
    <string name="achievements">Achievements</string>
    <string name="gradYear">Class of 2016</string>
    <string name="basketballActivity">Basketball- 1 year Freshman, Junior Varsity, Varsity</string>
    <string name="trackActivity">Track/Field- 4 years Varsity  Events- Long Jump, Triple Jump, Pole Vault, 300 Hurdles</string>
    <string name="checkGrades">Check My Grades</string>
    <string name="soccerActivity">Men\'s Soccer- 4 years Varsity and 2 years Varsity Captain</string>
    <string name="emailDeveloper">Email- twhite@slhs.us</string>
    <string name="email_developer_now">Email</string>
    <string name="contact_developer">Contact</string>
    <string name="thanks">Thanks</string>
    <string name="thanks_1">Mr. Erik White</string>
    <string name="thanks_2">Mr. Andrew Willems</string>
    <string name="title_activity_teacher_edition">Teacher Edition</string>
    <string name="original_edition">Original Edition</string>
    <string name="enter_grades">Enter Grades</string>
    <string name="seating">Seating</string>
    <string name="event_planner">Event Planner</string>
    <string name="lesson_planner">Lesson Planner</string>
    <string name="kahoot">Kahoot!</string>
    <string name="google_classroom">Google Classroom</string>
    <string name="title_activity_seating">Seating</string>
    <string name="title_activity_event_planner">Event Planner</string>
    <string name="title_activity_lesson_planner">Lesson Planner</string>
    <string name="title_activity_teacher_login">Login</string>
    <string name="title_activity_introduction_animation">Introduction Animation</string>
    <string name="moodle">Moodle</string>
    <string name="title_activity_movie">Movie</string>
    <string name="title_activity_seating_input">Create New Class</string>
    <string name="add">Add New</string>
    <string name="title_activity_lesson_plan_input">Create New Lesson Plan</string>
    <string name="title_activity_event_planner_input">Add New Event</string>
    <string name="name">ListViewBaseAdapter</string>
    <string name="image">Thumbnail</string>
    <string name="title_activity_image_text_list_view_activity">Image Text List View Activity</string>
    <string name="permissions">App Permission Reasons</string>
    <string name="permissions_info1">\"directly call phone numbers, this may cost you money\"- This means that this app can call the Shoreland phone number. If and only if connecting a call to Shoreland is long distance, it will cost you money. If connecting a call to Shoreland is not long distance, it will not cost you money.</string>
    <string name="permissions_info2">\"approximate location (network-based) precise location (GPS and network-based)\"- This means that this app can use your location for the purpose of calculating directions to Shoreland or other MCC schools.</string>
    <string name="permissions_info3">\"modify or delete the contents of your SD card\"- This means that this app can add in your call logs, a log saying that you just called Shoreland</string>
    <string name="permissions_info4">\"read Google service configuration\"- This means that this app can use the Google Maps service from Google on your phone.</string>
    <string name="permissions_info5">\"full network access, view network connections\"- This means that this app can use data and/or wifi on your phone.</string>
    <string name="search_hint">Search…</string>
    <string name="search_title">Search</string>
    <string name="title_activity_search__display">Search Results</string>
    <string name="action_search">Search MySLHS</string>
    <string name="title_activity_search__results">Search</string>
    <string name="conference_directions">Conference Directions</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_hintss">Hintss</string>
    <string name="title_activity_hints">Hints</string>
    <string name="logout">Logout</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_lessons">Lessons</string>
    <string name="title_activity_events_list">Your Events</string>
    <string name="title_activity_app_development_teacher">AppDevelopmentTeacher</string>

</resources>
