<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.thewhites.myslhs.AppDevelopmentTeacher">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item
        android:id="@+id/original_edition"
        android:title="@string/original_edition"
        android:orderInCategory="200"
        android:showAsAction="never" />


    <item
        android:id="@+id/settings"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/settings" />

    <item
        android:id="@+id/help"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/help" />

    <item android:id="@+id/search"
        android:title="@string/title_activity_search__display"
        android:icon="@drawable/ic_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/logout"
        android:orderInCategory="500"
        android:showAsAction="never"
        android:title="@string/logout" />
</menu>
