<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="2dp" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/arrow"
        android:layout_toStartOf="@+id/arrow"
        android:text="@string/title"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/author"
        android:layout_below="@+id/title"
        android:text="@string/author"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/pub_date"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_toStartOf="@+id/arrow"
        android:layout_toLeftOf="@+id/arrow"
        android:layout_alignBottom="@+id/author"/>

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_name"
        android:src="@android:drawable/ic_media_play" />

</RelativeLayout>